fix: highlight collapsing bug

--- a/source/css/highlight.styl
+++ b/source/css/highlight.styl
@@ -64,7 +64,8 @@
   pre
     overflow-y: hidden
     margin: 0
-    padding: 0 0.8em
+    padding: 0.8em
+    box-sizing: content-box
     transition: all 0.5s
 
   .hljs 
